# logic_puzzle_solver

./: .gitignore  LICENSE  README.md
cpp/: .editorconfig  .gitignore  CMakeLists.txt  build-gcc.sh  build-vc.bat  note.md
cpp/src/app/nur/: nurikabe.cpp
cpp/src/app/sli/: slilin.cpp
cpp/src/cmn/cmn/data/: Base.h  HatanException.h  LoadingException.h
cpp/src/cmn/cmn/solver/: BoardState.h  Solver.h
cpp/src/cmn/cmn/solver/topology/: SegmentAnalyzer.h  TrackAnalyzer.h  TrackTopology.h
cpp/src/nur/nur/data/: Assumption.h  Base.h  Board.cpp  Board.h  CellState.h  Shima.h  ShimaShapeEnumerator.h  ShimaWalker.cpp  ShimaWalker.h
cpp/src/nur/nur/serializer/: Formatter.cpp  Formatter.h  Loader.cpp  Loader.h
cpp/src/nur/nur/solver/: AssumptionEnumerator.h  Solver.h
cpp/src/nur/nur/solver/rule/: SPOverwrapRule.cpp  SPOverwrapRule.h  ShimaBorderRule.cpp  ShimaBorderRule.h  ShimaCompletionRule.cpp  ShimaCompletionRule.h  ShimaPotentialReachabilityRule.cpp  ShimaPotentialReachabilityRule.h  ShimaShapePossibilityRule.cpp  ShimaShapePossibilityRule.h
cpp/src/nur/nur/solver/topology/: KabeTopologicalRule.h  NoBlankShimaAllowedTopologicalRule.h  ShimaTopologicalRule.h  Topology.h
cpp/src/sli/sli/data/: Base.h  Board.cpp  Board.h  Cell.h  Helper.cpp  Helper.h
cpp/src/sli/sli/serializer/: Formatter.cpp  Formatter.h  Loader.cpp  Loader.h
cpp/src/sli/sli/solver/: Solver.h
cpp/src/sli/sli/solver/rule/: BasicNumberRule.h  CellRule.h  CellRuleRunner.h  DotRule.h  IncomingCornerRule.h  NumberCornerRule.cpp  NumberCornerRule.h  ThreePairInitialRule.h
cpp/src/utl/utl/: Ansi.h  Array2D.h  Array2DUtils.h  Base.h  Exception.h  NumericCombination.h  NumericIterator.h  Point.h  Range.h  StrUtils.h  Utils.h
cpp/test/nur/data/: Board_test.cpp
cpp/test/nur/solver/: Rules_test.cpp  ShimaEnumerator_test.cpp  Solver_test.cpp
cpp/test/sli/data/: Board_test.cpp  Helper_test.cpp
cpp/test/sli/serializer/: Loader_test.cpp
cpp/test/sli/solver/: BasicNumberRule_test.cpp  CellRuleCombination_test.cpp  DotRule_test.cpp  IncomingCornerRule_test.cpp  NumberCornerRule_test.cpp  Solver_test.cpp  ThreePairInitialRule_test.cpp  TopologicalRules_test.cpp  Track_test.cpp
cpp/test/utl/: Array2D_test.cpp  NumericCombination_test.cpp  Range_test.cpp
(+45 files in other folders)
